--- a/reverse_proxy.conf
+++ b/reverse_proxy.conf
@@ -2,13 +2,13 @@
 	SSLEngine on
 	SSLProtocol all -SSLv2
 
-	SSLCertificateFile      /etc/letsencrypt/live/msk1.soft.kz/cert.pem
-	SSLCertificateKeyFile   /etc/letsencrypt/live/msk1.soft.kz/privkey.pem
-	SSLCertificateChainFile /etc/letsencrypt/live/msk1.soft.kz/fullchain.pem
+	SSLCertificateFile      /etc/letsencrypt/live/example.com/cert.pem
+	SSLCertificateKeyFile   /etc/letsencrypt/live/example.com/privkey.pem
+	SSLCertificateChainFile /etc/letsencrypt/live/example.com/fullchain.pem
 
 	ProxyPreserveHost Off
 	ProxyRequests Off
 
-	ProxyPass / http://172.16.120.11:8008/
-	ProxyPassReverse / http://172.16.120.11:8008/
+	ProxyPass / http://127.0.0.1:80/
+	ProxyPassReverse / http://127.0.0.1:80/
 </VirtualHost>
